Fixed EventsQuery
Fixed EventsQuery which wasn't correctly handling new eventsResponse
